--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Application that allows users to create, collaborate, and share wikis.",
   "main": "src/server.js",
   "scripts": {
-    "test": "export NODE_ENV=test && jasmine",
+    "test": "export NODE_ENV=test&& jasmine",
     "start": "node src/server.js"
   },
   "repository": {
@@ -18,7 +18,19 @@
     "request": "^2.83.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "dotenv": "^5.0.0",
-    "express": "^4.16.2"
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.2.0",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.32.6"
   }
 }
