--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Application that allows users to create, collaborate, and share wikis.",
   "main": "src/server.js",
   "scripts": {
-    "test": "export NODE_ENV=test&& jasmine",
+    "test": "set NODE_ENV=test&& jasmine",
     "start": "node src/server.js"
   },
   "repository": {
@@ -18,19 +18,21 @@
     "request": "^2.83.0"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.18.2",
     "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "express-flash": "^0.0.2",
+    "express-flash": "0.0.2",
     "express-session": "^1.15.6",
-    "express-validator": "^5.2.0",
+    "express-validator": "^5.0.2",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
+    "sendgrid": "^5.2.3",
     "sequelize": "^4.32.6"
   }
 }
