--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "express-flash": "0.0.2",
+    "express-flash": "git://github.com/RGBboy/express-flash.git",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.2",
     "morgan": "^1.9.0",
@@ -33,6 +33,7 @@
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "sendgrid": "^5.2.3",
-    "sequelize": "^4.32.6"
+    "sequelize": "^4.32.6",
+    "sequelize-cli": "^4.0.0"
   }
 }
